--- a/.gitignore
+++ b/.gitignore
@@ -2,8 +2,37 @@
 #
 # gitignore contributors: remember to update Global/Xcode.gitignore, Objective-C.gitignore & Swift.gitignore
 
+# Xcode specific files
+.DS_Store
+build/
+DerivedData/
+xcuserdata/
+.idea/
+*.xcuserstate
+*.xcworkspace
+
+# Project settings that may cause merge conflicts
+*.xcodeproj/project.xcworkspace
+*.xcodeproj/xcuserdata/
+*.xcodeproj/project.xcconfig
+*.xcodeproj/xcshareddata/
+
+DerivedData/
+.idea/
+*.xcuserstate
+*.xcworkspace
+*.xcodeproj/project.xcworkspace
+*.xcodeproj/xcuserdata/
+*.xcodeproj/project.xcconfig
+*.xcodeproj/xcshareddata/
+*.xcodeproj/xcuserdata/
+
 ## User settings
 xcuserdata/
+*.moved-aside
+
+# Xcode Coverage Data
+*.xccoverage
 
 ## Obj-C/Swift specific
 *.hmap
@@ -12,6 +41,11 @@ xcuserdata/
 *.ipa
 *.dSYM.zip
 *.dSYM
+
+# Archive and Provisioning Profiles
+*.ipa
+*.app
+*.dSYM/
 
 ## Playgrounds
 timeline.xctimeline
@@ -29,6 +63,9 @@ playground.xcworkspace
 # hence it is not needed unless you have added a package configuration file to your project
 # .swiftpm
 
+# Swift Package Manager
+/.build/
+/Packages/
 .build/
 
 # CocoaPods
@@ -37,7 +74,8 @@ playground.xcworkspace
 # you should judge for yourself, the pros and cons are mentioned at:
 # https://guides.cocoapods.org/using/using-cocoapods.html#should-i-check-the-pods-directory-into-source-control
 #
-# Pods/
+Pods/
+pod_modules/
 #
 # Add this line if you want to avoid checking in source code from the Xcode workspace
 # *.xcworkspace
@@ -48,6 +86,9 @@ playground.xcworkspace
 # Carthage/Checkouts
 
 Carthage/Build/
+
+# SwiftPM
+.swiftpm/
 
 # fastlane
 #
@@ -60,3 +101,8 @@ fastlane/report.xml
 fastlane/Preview.html
 fastlane/screenshots/**/*.png
 fastlane/test_output
+
+# Other
+*.swp
+*.swo
+*.log
